# agent-archive

./: .env.example  .gitignore  MODAL.md  README.md  app.py  main.py  modal_app.py  modal_gpu.py  pyproject.toml  requirements.txt
.github/workflows/: sync-space.yml
data/cases/: case_1919_01_05_resource_sn84026749_1.json  case_1925_04_04_resource_sn82016181_1.json  case_1937_04_22_resource_sn83045462_1.json  case_1953_05_10_resource_sn83045462_1.json  georgetown_notice.json  hart_notice_evidence_cabinet.json
data/clue_packs/: ca_1937_04_22_resource_sn83045462_1937_04_22_ed_1.json
data/eval/: agent_trace_redacted.jsonl  eval.json  summary.md
data/gallery/: clippings.json
data/generated_cases/: 1805_10_29_resource_gdc_sn88063570_16096_e823298f2c4e95ae.json  1819_05_15_resource_gdc_sn88063570_16119_71754832ea7408bc.json  1819_06_01_resource_gdc_sn88063570_16133_f1009ad22c4626da.json  1919_01_05_resource_sn84026749_1919_01_05_ed_1_8a7ab9d886cf4a1c.json  1919_01_05_resource_sn84026749_1919_01_05_ed_1_ee72b000143615c7.json  (+9 more)
scripts/: build_cases_from_ingest.py  build_gallery.py  capture_demo_screenshots.py  demo_avatar_overlay.py  deploy_modal_gpu.sh  deploy_space.py  download_snippet_images.py  fetch_chronicling_america.py  generate_artifact.py  pregenerate_gallery_cases.py  prepare_agent_trace.py  preprocess_clue_pack.py  render_demo_cold_open.py  render_demo_full.py  restore_space_secrets.py  run_eval_local.py  run_llama.sh  run_modal.sh  sadtalker_lipsync.py  verify_live_inference.py  verify_local.py  voice_preview_demo.py  voxcpm_space.py  voxcpm_space_batch.py
(+64 files in other folders)
